add Google Play link
this is Android free version without further updates
(PRO version is being developed)

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <!-- Button -->
             <p class="btn-google-play">
-              <a href="#fakelinks">
+              <a href="https://play.google.com/store/apps/details?id=michalrucinsky.myapplication">
                 <img src="images/googlePlay.png" alt="">
               </a>
             </p> <!-- /.btn-google-play -->
